# AgentLite

./: .gitignore  main.py  pyproject.toml
config/: config.yaml  configs.py
config/develop/: config.yaml
config/develop/bluepigwx/: config.yaml
config/release/: config.yaml
server/agent/: agent_executor.py  agent_factory.py  agent_inst.py  agents_mgr.py  langchain_agent_factory.py  langchain_agent_inst.py
server/api_server/: chat_routes.py  manager_routes.py  mc_routes.py  server_app.py  tools_routes.py
server/api_server/chat/: chat_mgr.py
server/session_mgr/: chat_cmd.py  cmd_builder.py  cmd_dispatch.py  session.py  session_mgr.py
server/tools/: __init__.py  calculate.py  mc_builder.py  tool_register.py  weather.py
